# rustlab

./: Cargo.toml  LICENSE  README.md  build.rs
packaging/: archos_install.sh  cachyos_build_deb.sh  make-platform-icons.py
packaging/linux/: build-appimage.sh  build-packages.sh  rustlab.desktop
packaging/macos/: Info.plist  RustLab.icns  build-installer.sh  entitlements.plist  generate-icon.py  make-icns.sh  notarize.sh
packaging/windows/: build-installer.ps1
src/: app.rs  main.rs
src/kernel/: discovery.rs  mod.rs  worker.rs
src/notebook/: model.rs
src/output/: ansi.rs  mod.rs  render.rs
src/ui/: console_view.rs  launcher.rs  menu.rs  mod.rs  notebook_view.rs  sidebar.rs  style.rs
tests/fixtures/: smoke.ipynb
wix/: License.rtf  main.wxs
