[package]
name = "rustlab"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "highlighter", "markdown", "image", "svg", "canvas", "advanced", "lazy"] }
jupyter-zmq-client = { version = "1.0", features = ["tokio-runtime"] }
jupyter-protocol = "2.0"
nbformat = "3.0"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anstyle-parse = "1.0"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
anyhow = "1"
open = "5"
iced_term = "0.8.0"
