[package]
name = "rustlab"
version = "0.1.0"
edition = "2024"
description = "Native Jupyter notebook desktop app built with iced"
license = "MIT"
repository = "https://github.com/skcalanderson2/rustlab"

[package.metadata.deb]
maintainer = "Al Anderson <aanderson@internet2.edu>"
copyright = "2026, Al Anderson"
extended-description = """\
RustLab is a native Jupyter Notebook desktop application. It talks to \
Jupyter kernels directly over ZeroMQ (no Jupyter server required) and \
supports any installed kernelspec: Python, Julia, Mojo, R, and more."""
depends = "$auto"
recommends = "fonts-noto-color-emoji, mesa-vulkan-drivers, xdg-desktop-portal"
section = "science"
priority = "optional"
assets = [
    ["target/release/rustlab", "usr/bin/", "755"],
    ["packaging/linux/rustlab.desktop", "usr/share/applications/", "644"],
    ["packaging/linux/icons/128/rustlab.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["packaging/linux/icons/256/rustlab.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["packaging/linux/icons/512/rustlab.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
]

# The GUI stack (wgpu, cosmic-text, syntect) is unusably slow unoptimized;
# keep our code fast to compile but optimize all dependencies.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
iced = { version = "0.14", features = ["tokio", "highlighter", "markdown", "image", "svg", "canvas", "advanced", "lazy"] }
jupyter-zmq-client = { version = "1.0", features = ["tokio-runtime"] }
jupyter-protocol = "2.0"
nbformat = "3.0"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anstyle-parse = "1.0"
uuid = { version = "1", features = ["v4"] }
# default-features off: the default pulls ashpd's async-std runtime; we run tokio
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
anyhow = "1"
open = "5"
iced_term = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1"
